Bug 166483 - CALC. Changing cell number format error with special characters
Summary: CALC. Changing cell number format error with special characters
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.2.2 target:...
Keywords: bibisectRequest, regression
: 165306 168505 (view as bug list)
Depends on:
Blocks: Calc-Cells
  Show dependency treegraph
 
Reported: 2025-05-06 16:20 UTC by Ivan Moliterni Moya
Modified: 2025-09-30 11:36 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Explaing where is the error (37.49 KB, image/png)
2025-09-13 07:25 UTC, Ivan Moliterni Moya
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Moliterni Moya 2025-05-06 16:20:33 UTC
Description:
When changing cell numbers format, "insert special symbol" dont work and special character dialog is not show. I used it always, and in previus versión this work perfect, but in the 25.2 version it dont work.
I tried "hot keys" (ctr+Shift+S, and picking in the dialog that is shown with MRB.

But this dialog works fine when a cell is selected and "insert special symbol" is call (no matter what way, hot-key, menu, etc).

Steps to Reproduce:
1. Select a cell (with numbers).
2. Menu format -> CELL.
3. Inside format dialog, choose "number" and in field "type of format" (#.##0,00" m") when trying to insert a "m²" with "special character", the dialog dont appears, and is imposible to insert. Only "copy" from other side and "paste it" works.

Actual Results:
Nothing. The "insert special character" dont appears

Expected Results:
It has to be shown so you can choose a character to be used as format whit numbers.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
No other information is needed.
I works perfect y previus versions (v24)
Comment 1 m_a_riosv 2025-05-06 21:13:41 UTC
None version works in such way, even Ooo.
Comment 2 Werner Tietz 2025-05-07 05:57:26 UTC
(In reply to Ivan Moliterni Moya from comment #0)
…
> 3. Inside format dialog, choose "number" and in field "type of format"
> (#.##0,00" m") when trying to insert a "m²" with "special character", the
> dialog dont appears, and is imposible to insert. Only "copy" from other side
> and "paste it" works.

Why not simply type … "m [altGr+2]" in the Format-Dialog?
Comment 3 raal 2025-05-07 14:50:58 UTC
No repro with Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 32c7035824e50429c4ffeb43d0bdf306ba8874e9
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Special character dialog open with ctr+Shift+S.
Comment 4 m_a_riosv 2025-05-07 16:49:07 UTC
Menu/Insert doesn't work in any version.

But customizing a hotkey, they have stopped working with the version:
Version: 24.8.7.2 (X86_64) / LibreOffice Community
Build ID: e07d0a63a46349d29051da79b1fde8160bab2a89
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded


Latest version where the customization works.
Version: 24.2.7.2 (X86_64) / LibreOffice Community
Build ID: ee3885777aa7032db5a9b65deec9457448a91162
CPU threads: 16; OS: Windows 10.0 Build 26100; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded

I put it as new, but only about customize hotkeys.
Comment 5 Saburo 2025-05-08 08:03:56 UTC
Probably Windows only.
Works fine bibisect-win64-25.8
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 677568200f81a2c9921e08d18169d6103e01fe61
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: en-US
Calc: CL threaded

and 32bit
Version: 25.2.3.2 (x86) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded

I don't understand why it doesn't work with a normal installation of LibreOffice.
Comment 6 Buovjaga 2025-09-12 17:51:24 UTC
(In reply to m_a_riosv from comment #4)
> Menu/Insert doesn't work in any version.
> 
> But customizing a hotkey, they have stopped working with the version:

Do you mean any and all keyboard shortcut customisation has stopped working? Worked fine for me to make Shift+Ctrl+S be "Symbol" which opens Special Character dialog.

Arch Linux
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b8a10164dca775cba85eafe63eac3fa1d8171f69
CPU threads: 16; OS: Linux 6.16; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 10 Sept 2025
Comment 7 Ivan Moliterni Moya 2025-09-13 07:25:17 UTC
Created attachment 202814 [details]
Explaing where is the error
Comment 8 Ivan Moliterni Moya 2025-09-13 07:27:20 UTC
I have recently upgraded to new version:

Version: 25.8.1.1 (X86_64)
Build ID: 54047653041915e595ad4e45cccea684809c77b5
CPU threads: 12; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded

The problem is still there.
With version 24, it works perfectly.
Now something happens, and its impossible to call that dialog from the dialog wich formats cells
Comment 9 Buovjaga 2025-09-17 18:15:43 UTC
(In reply to Ivan Moliterni Moya from comment #7)
> Created attachment 202814 [details]
> Explaing where is the error

Indeed, in a Windows release build, Format Cells - Format Code context menu item for inserting a special char doesn't work. Daily master build works fine, so something in the build options.
Comment 10 Xisco Faulí 2025-09-18 15:38:30 UTC
Also reproduced in

Version: 24.8.7.2 (X86_64) / LibreOffice Community
Build ID: e07d0a63a46349d29051da79b1fde8160bab2a89
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 11 Xisco Faulí 2025-09-18 15:45:27 UTC
Not reproducible in

Version: 7.6.7.2 (X86_64) / LibreOffice Community
Build ID: dd47e4b30cb7dab30588d6c79c651f218165e3c5
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 12 Xisco Faulí 2025-09-18 15:52:37 UTC
Not reproducible in

Version: 24.2.7.2 (X86_64) / LibreOffice Community
Build ID: ee3885777aa7032db5a9b65deec9457448a91162
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 13 Xisco Faulí 2025-09-18 16:40:02 UTC
Reproduced in

Version: 24.8.0.0.alpha1 (X86_64) / LibreOffice Community
Build ID: a17e39caaf73108bee692d6f64a44c62f4066f1d
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded
Comment 14 Commit Notification 2025-09-19 10:19:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9f4304ff2dbb706a1160afd347e538e615e1290f

tdf#166483 special char dialog not available with mergedlibs build

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Xisco Faulí 2025-09-19 11:11:20 UTC
I do confirm the issue is fixed with a local build with --enable-mergelibs=more. Setting as VERIFIED.
@Noel, thanks for fixing this issue
Comment 16 Commit Notification 2025-09-19 11:47:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d3def5d2894170c5832418b5008896c5ad3b82bf

tdf#166483 special char dialog not available with mergedlibs build

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Xisco Faulí 2025-09-19 11:51:23 UTC
The commit also fixes showing the Special Characters dialog from the Replace dialog
Comment 18 Commit Notification 2025-09-19 11:52:10 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/6b39072d441dca5265c6f1ae1d66354617037d52

tdf#166483 special char dialog not available with mergedlibs build

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Xisco Faulí 2025-09-22 12:34:45 UTC
*** Bug 168505 has been marked as a duplicate of this bug. ***
Comment 20 Xisco Faulí 2025-09-22 12:35:14 UTC
*** Bug 165306 has been marked as a duplicate of this bug. ***
Comment 21 Commit Notification 2025-09-29 14:56:42 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-2":

https://git.libreoffice.org/core/commit/1edf6d83bbd30273979154020fd54cecc4256765

tdf#166483 special char dialog not available with mergedlibs build

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.