tdf#166483 special char dialog not available with mergedlibs build

Change-Id: I08cc1fe82845cfea82150e332b0ea0ad597f6cda
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191189
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 9f4304ff2dbb706a1160afd347e538e615e1290f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191191
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
(cherry picked from commit d3def5d2894170c5832418b5008896c5ad3b82bf)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191196
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>